# ZigZagCore

./: .gitignore  .gitmodules  BaseDataInput.cpp  BaseDataInput.hpp  BaseDataSource.cpp  BaseDataSource.hpp  BaseOperator.cpp  BaseOperator.hpp  CMakeLists.txt  DataInput.hpp  DataSource.hpp  ZigZagInputOutput.hpp  ZigZagObject.cpp  ZigZagObject.hpp  ZigZagParentChild.hpp  main.cpp
ZigZag/: BaseBehaviour.cpp  BaseBehaviour.hpp  BaseDataInput.cpp  BaseDataInput.hpp  BaseDataSource.cpp  BaseDataSource.hpp  BaseOperator.cpp  BaseOperator.hpp  BaseParameter.cpp  BaseParameter.hpp  HeapValue.hpp  InputOutputRelationship.hpp  LuaBehaviour.cpp  LuaBehaviour.hpp  Object.cpp  Object.hpp  ObjectFactory.cpp  ObjectFactory.hpp  ParentChildRelationship.hpp  Platform.hpp  RenderOrder.cpp  RenderOrder.hpp  TParameter.hpp  UnixPluginLoader.cpp  Variant.cpp  Variant.hpp  WindowsPluginLoader.hpp  ZigZagParentChild.hpp
ZigZag/detail/: Parent.inl  ParentChild.hpp
ZigZag/parameter/: BaseParameter.cpp  BaseParameter.hpp
include/ZigZag/: Platform.hpp
source/ZigZag/: BaseBehaviour.cpp  BaseBehaviour.hpp  BaseDataInput.cpp  BaseDataSource.cpp  BaseDataSource.hpp  BaseOperator.hpp  LuaBehaviour.hpp  Object.hpp  ObjectSelection.cpp  ObjectSelection.hpp  PlatformPluginLoader.hpp  PluginLoader.hpp  RenderOrder.cpp  RenderOrder.hpp  UnixPluginLoader.cpp  UnixPluginLoader.hpp  WindowsPluginLoader.cpp
source/ZigZag/detail/: Child.inl  Input.inl  InputOutput.hpp  Output.inl
